--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -9,12 +9,12 @@
 
 
 <p>Add new post+</p>
-<form method="post" asp-action="CreatePost">
+<form method="post">
     <p>Text:</p>
     <input type="text" name="desc">
     <p>Choose a tag:</p>
     <select name="tag">
-        @foreach (var tag in @Model.Tags!)
+        @foreach (var tag in @Model.Tags)
         {
             <option value="@tag.Id"> @tag.Name</option>
         }
