--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -46,7 +46,7 @@
 
                     <li>
                         <p>@comment.Text </p>
-                        <a asp-page="Profile" asp-route-id="@user.ID"><pre>  by: @user.Name</pre></a>
+                        <a asp-page="Profile" asp-route-userId="@user.ID"><pre>  by: @user.Name</pre></a>
                     </li>
                 }
             </ul>
