--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -6,6 +6,14 @@
 }
 
 <h2>@Model.User.Name</h2>
+@if (Model.User.ID != @Model.LoggedIn.LoggedInAccountID)
+{
+<form method="post" asp-page-handler="follow"> 
+    <input hidden name="userId" value="@Model.User.ID">
+    <button type="submit">@Model.FollowText</button>
+</form>
+    
+}
 
 <p> User posts: </p>
 <ul>
