--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -5,10 +5,8 @@
     ViewData["Title"] = "Home page";
 }
 
-<h1>Welcome, @accessControl.LoggedInAccountName!</h1>
-
-
 <p>Add new post+</p>
+<link rel="stylesheet" href="~/css/site.css" />
 <form method="post">
     <p>Text:</p>
     <input type="text" name="desc">
@@ -28,7 +26,7 @@
         var poster = Model.Users.Single(x => post.UserID == x.ID);
         <li>
             <p>
-                <a asp-page="Profile" asp-route-userId="@poster.ID"><pre> @poster.Name</pre></a>
+                <a asp-page="Profile" asp-route-userId="@poster.ID"> <pre> @poster.Name</pre></a>
             </p>
             <p> @post.Description</p>
             @if (@Model.Tags.Single(x => x.Id == post.TagID).Id != 1)
