--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -42,9 +42,9 @@ button[type="submit"] {
     cursor: pointer;
 }
 
-button[type="submit"]:hover {
-    background-color: #3e8e41;
-}
+    button[type="submit"]:hover {
+        background-color: #3e8e41;
+    }
 
 .parentNavBarContainer {
     display: grid;
@@ -78,4 +78,10 @@ button[type="submit"]:hover {
 .flow {
     width: clamp(200px, 100%, 500px);
     margin: auto;
+    background-color: #2e3136;
+}
+
+.flow > li {
+    border-bottom: 1px solid grey;
+    padding: 1em;
 }
