--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>@Model.User.Name</h2>
-<p>Followers: @Model.amountOfFollowers Following: @Model.amountFollowing</p>
+<p>Following: @Model.amountFollowing Followers: @Model.amountOfFollowers</p>
 @if (Model.User.ID != @Model.LoggedIn.LoggedInAccountID)
 {
 <form method="post" asp-page-handler="follow"> 
