--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -36,7 +36,7 @@
             <p>@post.TimeSincePost()</p>
             <p>Likes: @post.LikeCount</p>
             <form method="post" asp-page-handler="like" asp-route-id="@post.ID"><button type="submit">Like</button></form>
-            <p> @Model.amountOfReporters people you follow have reported this post as untrustworthy.</p>
+            <p> @Model.database.Reports.Where(r => Model.PeopleYouFollow.Select(p => p.UserID).Contains(r.UserID) && r.PostID == post.ID).Count() people you follow have reported this post as untrustworthy.</p>
             <form method="post" asp-page-handler="report" asp-route-id="@post.ID"><button type="submit">Report</button></form>
 
 
