--- a/Project Hashtag/Pages/Shared/_Layout.cshtml
+++ b/Project Hashtag/Pages/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             <img src="FaceGramLogo.svg" alt="FaceGram Logo Gold" class="svg-logo" type="image/svg+xml" id="FaceGramNavBarLogo">
         </div>
         <div class="div3NavBar">
-            <h1>@accessControl.LoggedInAccountName</h1>
+            <h1>@accessControl.LoggedInAccountName <img src="@accessControl.LoggedInAvatar" style="width: 40px"/></h1>
         </div> 
     </div>
     <header>
