--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -34,15 +34,16 @@
             continue;
         }
         <li>
-            <p>
-                <a asp-page="Profile" asp-route-userId="@poster.ID"> <pre> @poster.Name</pre></a>
-            </p>
+            <div class="postProfile">
+                <a asp-page="Profile" asp-route-userId="@poster.ID"> <div class="profilePic"> </div> </a>
+                <a asp-page="Profile" asp-route-userId="@poster.ID"> <pre>@poster.Name</pre></a>
+                <span>@post.TimeSincePost()</span>
+            </div>
             <p> @post.Description</p>
             @if (@Model.Tags.Single(x => x.Id == post.TagID).Id != 1)
             {
                 <p>Tag: @Model.Tags.Single(x => x.Id == post.TagID).Name</p>
             }
-            <p>@post.TimeSincePost()</p>
             <p>Likes: @post.LikeCount</p>
             <form method="post" asp-page-handler="like" asp-route-id="@post.ID"><button type="submit">Like</button></form>
             <p> @Model.database.Reports.Where(r => Model.PeopleYouFollow.Select(p => p.UserID).Contains(r.UserID) && r.PostID == post.ID).Count() people you follow have reported this post as untrustworthy.</p>
