--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -37,7 +37,8 @@
             <div class="postProfile">
                 <a asp-page="Profile" asp-route-userId="@poster.ID"> <div class="profilePic"> </div> </a>
                 <a asp-page="Profile" asp-route-userId="@poster.ID"> <pre>@poster.Name</pre></a>
-                <span>@post.TimeSincePost()</span>
+                <p>· @post.TimeSincePost()</p>
+                <form method="post" asp-page-handler="report" asp-route-id="@post.ID"> <label class="report"> <button type="submit"></button> </label></form>
             </div>
             <p> @post.Description</p>
             @if (@Model.Tags.Single(x => x.Id == post.TagID).Id != 1)
@@ -47,7 +48,6 @@
             <p>Likes: @post.LikeCount</p>
             <form method="post" asp-page-handler="like" asp-route-id="@post.ID"><button type="submit">Like</button></form>
             <p> @Model.database.Reports.Where(r => Model.PeopleYouFollow.Select(p => p.UserID).Contains(r.UserID) && r.PostID == post.ID).Count() people you follow have reported this post as untrustworthy.</p>
-            <form method="post" asp-page-handler="report" asp-route-id="@post.ID"><button type="submit">Report</button></form>
 
 
             <p>Comments: </p>
