--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -109,6 +109,7 @@ Below is flow styling
 .flow {
     width: clamp(200px, 100%, 500px);
     margin: auto;
+    border-radius: 7px;
     background-color: #2e3136;
 }
 
@@ -123,12 +124,50 @@ Below is flow styling
     align-items: center;
     gap: 0.4em;
     padding-bottom: 1em;
+    position: relative;
 }
 
 .profilePic {
     background-color: #1F2023;
     width: 40px;
     height: 40px;
-    background-image: url(~/standard-profile-pic.png);
+    background-image: url(../standard-profile-pic.png);
+    background-position: 50% 40%;
+    background-size: 35px;
     border-radius: 20px;
+}
+
+.postProfile p {
+    font-size: 12px;
+    opacity: 0.8;
+}
+
+/*
+
+Report button styling
+
+*/
+
+.report > button {
+    visibility: hidden;
+}
+
+.report {
+    width: 40px;
+    height: 40px;
+    background-image: url(../report-flag.png);
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    opacity: 0.6;
+    top: 0;
+    right: 0;
+    transition: all 200ms ease;
+}
+
+.report:hover {
+    cursor: pointer;
+    opacity: 1;
+    background-image: url(../report-flag-red.png);
 }
