--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -22,9 +22,6 @@ ul {
     padding: 0;
 }
 
-li {
-    margin-bottom: 20px;
-}
 
 a {
     color: aqua;
@@ -55,6 +52,7 @@ button[type="submit"] {
 .parentNavBarContainer {
     display: grid;
     position: fixed;
+    z-index: 1;
     width: 100%;
     grid-template: "a b c" /1fr 1fr 1fr;
     height: 10vh; /* 10% of viewport height */
@@ -125,6 +123,7 @@ Below is flow styling
     gap: 0.4em;
     padding-bottom: 1em;
     position: relative;
+    z-index: 0;
 }
 
 .profilePic {
@@ -170,4 +169,23 @@ Report button styling
     cursor: pointer;
     opacity: 1;
     background-image: url(../report-flag-red.png);
+}
+
+.reportWarning {
+    width: 100%;
+    height: 1.3em;
+    padding: 1em;
+    display: flex;
+    gap: 1em;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    margin: 0em 0 1em 0;
+    font-size: 14px;
+    background-color: rgba(253, 36, 36, 0.727);
+}
+
+.reportWarning img {
+    width: 20px;
 }
