--- a/Project Hashtag/Pages/Shared/_Layout.cshtml
+++ b/Project Hashtag/Pages/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         <img src="~/FaceGramLogo.svg" alt="FaceGram Logo Gold" class="svg-logo" type="image/svg+xml" id="FaceGramNavBarLogo">
         </a>
         <div class="div3NavBar">
-            <a asp-page="Profile" asp-route-userId="@accessControl.LoggedInAccountID">@accessControl.LoggedInAccountName <img src="@accessControl.LoggedInAvatar" style="width: 40px" /></a>
+            <a asp-page="Profile" asp-route-userId="@accessControl.LoggedInAccountID">@accessControl.LoggedInAccountName <img src="~/standard-profile-pic.png" alt="profile picture" style="width: 40px" /></a>
         </div> 
     </header>   
     <div id="fakeLogin">
