tiiiiny fix search method

--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<form method="get" action="/Search">
+<form method="get">
     <input type="text" asp-for="@Model.search" placeholder="Search for profile...">
     <button type="submit">Search</button>
 </form>
