--- a/Project Hashtag/Pages/Shared/_Layout.cshtml
+++ b/Project Hashtag/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,12 @@
 </head>
 <body>
     <header class="parentNavBarContainer"> 
-        <div class="div1NavBar"> </div> 
+        <div class="div1NavBar">
+            <form method="get" asp-page="/index">
+           <input type="text" name="search" placeholder="Search for profile...">
+           <button type="submit">Search</button>
+           </form>
+            </div> 
         <a class="div2NavBar" asp-page="./index">
         <img src="~/FaceGramLogo.svg" alt="FaceGram Logo Gold" class="svg-logo" type="image/svg+xml" id="FaceGramNavBarLogo">
         </a>
