--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -3,14 +3,16 @@
     src: url('PoppinsTVG-SemiBold.woff2') format('woff2');
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Wix Madefor Display', sans-serif;
 }
 
 html, body {
-    font-family: 'PoppinsTVG-SemiBold', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #1F2023;
@@ -61,6 +63,9 @@ button[type="submit"] {
 .div1NavBar {
     grid-area: a;
     background-color: #2E3136;
+    display: flex;
+    justify-content: end;
+    align-items: center;
 }
 
 .div2NavBar {
@@ -73,19 +78,21 @@ button[type="submit"] {
 
 .div3NavBar {
     grid-area: c;
+    display: flex;
+    justify-content: start;
+    align-items: center;
     text-align: center;
     background-color: #2E3136; /* Add background color for visibility */
 }
 
 .div3NavBar > a {
     display:flex;
-    position: relative;
-    top: 50%;
+    margin-left: 4em;
+    gap: 0.5em;
     color: white;
-    align-content: center;
+    align-items: center;
     text-decoration:none;
-    justify-content:end;
-    padding: 0px 10px 10px 0px;
+    justify-content: center;
 }
 .div3NavBar img {
     margin-left:7px;
@@ -103,6 +110,42 @@ button[type="submit"] {
 
 #fakeLogin {
     padding-top: 10vh;
+}
+
+#searchbar {
+    display: flex;
+    height: 32px;
+    justify-content: center;
+    border: 1px solid #d5af34;
+    border-radius: 1.5em;
+}
+
+#searchbar > input {
+    margin: 0 !important;
+    background-color: transparent;
+    border: none;
+    color: #f9f5f3;
+}
+
+#searchbar > input::placeholder {
+    color: #f9f5f3;
+}
+
+#searchbar > input:focus {
+    outline: none;
+}
+
+#searchbar > label {
+    border-radius: 1.5em;
+    background-color: #d5af34;
+    background-image: url(../search.png);
+    background-size: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#searchbar button {
+    visibility: hidden;
 }
 
 
