--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -49,16 +49,23 @@
                 <p>· @post.TimeSincePost()</p>
                 <form method="post" asp-page-handler="report" asp-route-id="@post.ID"> <label class="report"> <button type="submit"></button> </label></form>
             </div>
-            <p> @post.Description</p>
-            @if (@Model.Tags.Single(x => x.Id == post.TagID).Id != 1)
-            {
-                <p>Tag: @Model.Tags.Single(x => x.Id == post.TagID).Name</p>
-            }
-            <p>Likes: @post.LikeCount</p>
-            <form method="post" asp-page-handler="like" asp-route-id="@post.ID"><button type="submit">Like</button></form>
+            <p class="postText"> @post.Description</p>
+            <ul class="interaction">
+                <form method="post" asp-page-handler="like" asp-route-id="@post.ID">
+                    <label>
+                        <button type="submit"></button>
+                        <p>@post.LikeCount</p>
+                    </label>
+                </form>
+                <a>
+                    <div class="comments">
+                        
+                    </div>
+                    <p>@Model.Comments.Where(x => x.PostID == post.ID).Count()</p>
+                </a>
+            </ul>
 
-
-            <p>Comments: </p>
+            @*<p>Comments: </p>
             <ul>
                 @foreach (var comment in Model.Comments.Where(x => x.PostID == post.ID).OrderBy(z => z.CreatedDate))
                 {
@@ -79,7 +86,7 @@
             <form method="post" asp-page-handler="comment" asp-route-id="@post.ID">
                 <input type="text" name="content"> 
                 <button type="submit">Comment</button>
-                </form>
+                </form>*@
 
         </li>
     }
