--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -2,7 +2,7 @@
 @model Project_Hashtag.Pages.ProfileModel
 
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = Model.User.Name;
 }
 
 
@@ -16,24 +16,6 @@
     <button type="submit">@Model.FollowText</button>
 </form>
     
-}
-@if(Model.User.ID == Model.LoggedIn.LoggedInAccountID)
-{
-    <p>Add new post+</p>
-    <link rel="stylesheet" href="~/css/site.css" />
-    <form method="post">
-        <p>Text:</p>
-        <input type="text" name="desc">
-        <p>Choose a tag:</p>
-        <select name="tag">
-            @foreach (var tag in Model.Tags)
-            {
-                <option value="@tag.Id"> @tag.Name</option>
-            }
-        </select>
-        <button type="submit">Post</button>
-    </form>
-
 }
 
 <p> User posts: </p>
