--- a/Project Hashtag/Pages/Search.cshtml
+++ b/Project Hashtag/Pages/Search.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Project_Hashtag.Pages.SearchModel
 @{
-    ViewData["Title"] = "Search";
+    ViewData["Title"] = "Facegram";
 }
 
 <h2>Search results:</h2>
