--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -5,38 +5,27 @@
     ViewData["Title"] = "Profile";
 }
 
+<div class="profileDescription">
+    <h2>@Model.User.Name</h2>
+    <p>Following: <b>@Model.amountFollowing</b> Followers: <b>@Model.amountOfFollowers</b></p>
 
-<h2>@Model.User.Name</h2>
+	@if (Model.User.ID != @Model.LoggedIn.LoggedInAccountID)
+	{
+		<form method="post" asp-page-handler="follow">
+			<input hidden name="userId" value="@Model.User.ID">
+			<button type="submit">@Model.FollowText</button>
+		</form>
 
-<p>Following: @Model.amountFollowing Followers: @Model.amountOfFollowers</p>
-@if (Model.User.ID != @Model.LoggedIn.LoggedInAccountID)
-{
-<form method="post" asp-page-handler="follow"> 
-    <input hidden name="userId" value="@Model.User.ID">
-    <button type="submit">@Model.FollowText</button>
-</form>
-    
-}
+	}
+</div>
+
+
 @if(Model.User.ID == Model.LoggedIn.LoggedInAccountID)
 {
-    <p>Add new post+</p>
-    <link rel="stylesheet" href="~/css/site.css" />
-    <form method="post">
-        <p>Text:</p>
-        <input type="text" name="desc">
-        <p>Choose a tag:</p>
-        <select name="tag">
-            @foreach (var tag in Model.Tags)
-            {
-                <option value="@tag.Id"> @tag.Name</option>
-            }
-        </select>
-        <button type="submit">Post</button>
-    </form>
+    
 
 }
 
-<p> User posts: </p>
 <ul class="flow">
     @foreach (var post in Model.userPosts)
     {
