--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -52,7 +52,7 @@
                         <p>@post.LikeCount</p>
                     </label>
                 </form>
-                <a>
+                <a asp-page="post" asp-route-postID="@post.ID">
                     <div class="comments">
                         
                     </div>
