--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -30,7 +30,7 @@
         <li>
             @if (reports == 1)
             {
-                <span class="reportWarning"> <img src="~/information.png"></img> <p> @reports person you follow have reported this post as untrustworthy.</p></span>
+                <span class="reportWarning"> <img src="~/information.png"></img> <p> @reports person you follow has reported this post as untrustworthy.</p></span>
             }
             else if (reports > 0)
             {
@@ -46,6 +46,7 @@
             </div>
             <p class="postText"> @post.Description</p>
             <ul class="interaction">
+                <li>
                 <form method="post" asp-page-handler="like" asp-route-id="@post.ID">
                     <label>
                         <button type="submit"></button>
@@ -58,8 +59,11 @@
                     </div>
                     <p>@Model.Comments.Where(x => x.PostID == post.ID).Count()</p>
                 </a>
-            </ul>
-
+                </li>
+              </ul>
+        </li>
+    }
+</ul>
             @*<p>Comments: </p>
             <ul>
                 @foreach (var comment in Model.Comments.Where(x => x.PostID == post.ID).OrderBy(z => z.CreatedDate))
@@ -82,7 +86,3 @@
                 <input type="text" name="content"> 
                 <button type="submit">Comment</button>
                 </form>*@
-
-        </li>
-    }
-</ul>
