--- a/Project Hashtag/Pages/Post.cshtml
+++ b/Project Hashtag/Pages/Post.cshtml
@@ -1,5 +1,64 @@
 ﻿@page "{postID:int}"
 @model Project_Hashtag.Pages.PostModel
 @{
-	ViewData["Title"] = "Facegram";
+	ViewData["Title"] = Model.User.Name;
 }
+
+<ul class="flow">
+
+	<li>
+		@*<p>@Model.Post.Description</p>
+		<p> @Model.Post.TimeSincePost()</p>
+		<p>Likes: @Model.Post.LikeCount</p>*@
+        <ul>
+            <li>
+                @if (Model.Reports.Count == 1)
+                {
+                    <span class="reportWarning"> <img src="~/information.png"></img> <p> @Model.Reports.Count person you follow has reported this post as untrustworthy.</p></span>
+                }
+                else if (Model.Reports.Count > 0)
+                {
+                    <span class="reportWarning"> <img src="~/information.png"></img> <p> @Model.Reports.Count people you follow have reported this post as untrustworthy.</p></span>
+                }
+                <div class="postProfile">
+                    <a asp-page="Profile" asp-route-userId="@Model.User.ID" class="postProfileBox">
+                        <div class="profilePic"> </div>
+                        <pre>@Model.User.Name</pre>
+                    </a>
+                    <p>· @Model.Post.TimeSincePost()</p>
+                    <form method="post" asp-page-handler="report" asp-route-id="@Model.Post.ID"> <label class="report"> <button type="submit"></button> </label></form>
+                </div>
+                <p class="postText"> @Model.Post.Description</p>
+                <ul class="interaction">
+                    <form method="post" asp-page-handler="like" asp-route-id="@Model.Post.ID">
+                        <label>
+                            <button type="submit"></button>
+                            <p>@Model.Post.LikeCount</p>
+                        </label>
+                    </form>
+                    <a asp-page="post" asp-route-postID="@Model.Post.ID">
+                        <div class="comments">
+                        </div>
+                        <p>@Model.Comments.Where(x => x.PostID == Model.Post.ID).Count()</p>
+                    </a>
+                </ul>
+            </li>
+        </ul>
+        <form method="post" asp-page-handler="comment" asp-route-id="@Model.Post.ID">
+            <input type="text" name="content">
+            <input hidden name="userId" value="@Model.User.ID">
+            <button type="submit">Comment</button>
+        </form>
+
+        @if (Model.User.ID == Model.LoggedIn.LoggedInAccountID)
+        {
+            <form method="post" asp-page-handler="delete" asp-route-id="@Model.Post.ID">
+                <input hidden name="userId" value="@Model.User.ID">
+                <button type="submit">Delete</button>
+            </form>
+        }
+	</li>
+
+
+
+</ul>
