--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -18,9 +18,10 @@
 
 	}
 else
-	{
-	    <button type="submit" id="editProfileButton">Edit Profile</button>
-    }
+{
+    <a asp-page="/ProfileSettings" class="editProfileButton">Edit Profile</a>
+}
+
 
     
 
