--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -9,7 +9,9 @@
     <h2>@Model.User.Name</h2>
     <p>Following: <b>@Model.amountFollowing</b> Followers: <b>@Model.amountOfFollowers</b></p>
 
-	@if (Model.User.ID != @Model.LoggedIn.LoggedInAccountID)
+    <p>@Model.User.Biography</p>
+    
+    @if (Model.User.ID != @Model.LoggedIn.LoggedInAccountID)
 	{
 		<form method="post" asp-page-handler="follow">
 			<input hidden name="userId" value="@Model.User.ID">
